
          Release Notes for Bacula 2.2.0

  Bacula code: Total files = 438 Total lines = 154,329 (*.h *.c *.in)

This Director and Storage daemon must be upgraded at the same time,
but they should be compatible with all 2.0.x File daemons, unless you
use some of the new features that affect the FD.  In other words, you should
not have to upgrade all your File daemons.

The major features are:
- First cut of bat (Bacula Administration Tool)
- Red/Black restore in memory tree (500 times faster loading).
- Much faster insertion of attributes (somewhere around 10 times).
- The Regex Where code to allow easier relocation of restored files.
- Socket level heartbeat for all connections (untested).
- posix_fadvise() use in the FD to improve performance.
- Simpler locking in the SD in the reservation system.
- Much improved Volume reservation code that should eliminate most
  conflicts experienced in multiple drive autochangers.
- Detection of file size/date change during backup if enabled.
- New Recycle Pool feature.
- Efficient implementation of very large include/exclude lists.
- Volumes are no longer pruned during 'status dir'
- Pruning is now more efficient, and if a Volume is purged,
  during pruning, it is immediately discovered.

Other features or bug fixes:
- Fixed bugs: 846, 809, 772, 822, 825, 824, 808, 802, 797, 
  798, 795, 789, 791, 788, 780, 763, 782, 612, 767,
  775, 621, 772, 764, 766, 621, 761, 755, 750, 741,
  747, 742, 744, and 743.
- Only the minumum number of volumes are pruned rather than
  all volumes in the pool.
- wx-console renamed to bwx-console
- gnome-console renamed to bgnome-console
- Migration preserves original job's FileSetId
- Spooling implemented for migration jobs.
- Config files can be read through a pipe, by specifying a leading |
  in front of the configuration path/filename.
- New memory command (bconsole) that will print the current Director's
  memory usage, and a in use buffer dump.